--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="container">
         <header class= "header">
            <section>
-                <img class= "boozeHeader" src="images/boozeBanner.jpg" alt="bottles of alcohol"/>
+                <img class= "boozeHeader" src="boozeBanner.jpg" alt="bottles of alcohol"/>
             </section>
             <section>
                 <ul>
